--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,18 +7,18 @@
   
   {{!-- burger list before being eaten --}} 
   <div class="row">
-      <div class="col-md-4 col-md-offset-1">
-        <div class="panel-panel default">
-           <ul class="list-group"> 
-              {{#each burgers}} 
-                {{#unless this.devoured}} 
-                  <li class="list-group-item">
+      <div class="col-xs-6 col-offset-2">
+        <div class="panel-panel-sm">
+           <ul class="list-group-sm"> 
+            {{#each burgers}} 
+                {{#unless devoured}} 
+           <li class="list-group-item">
                   <div class="input-group">
                   <p class="lead"> {{this.burger_name}} </p>
                    <span class="input-group-btn">
-                <form action="/burgers/updateOne/:id"{{this.id}}?_method=PUT" method="POST">
-                  <input type="hidden" name="devoured" value="true">
-                  <button class="btn btn-default btn-lg" type="submit"> Devour! </button>
+                <form action="/updateOne?_method=PUT" method="POST">
+                  <input type="hidden" name="this.burger_name" value="{{this.id}}">
+                  <button class="btn btn-default" type="submit">Devour!</button>
                 </form>
               </span>
             </div>
@@ -30,15 +30,14 @@
     </div>
   </div>
     {{!-- burger list after being eaten --}}
-  
-    <div class="column">
-      <div class="col-md-8 col-md-offset-6">
-      <div class="panel panel-default">
+    <div class="row">
+      <div class="col-xs-4 col-offset-2">
+      <div class="panel panel-sm">
         <ul class="list-group"> 
         {{#each burgers}}
           {{#if this.devoured}} 
           <li class="list-group-item">
-            <p class="lead">{{this.burger_name}} </p>
+            <p class="lead">{{this.burger_name}}</p>
           </li>
           {{/if}}
         {{/each}}
@@ -47,15 +46,19 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-md-offset-4" height=15px>
+  <div class="container">
+  <div class = "row">
+  <div class="col-xs-12 text-center enter_section">
     <p class="lead">What kind of Burger would you like? Enter the name below! </p>
 
     {{!-- section to add burgers --}}
     <form class="create-update-form" action="/insertOne" method="POST">
-      <div class="form-group">
-        <textarea class="form-control input-lg" type="text" name="burger_name" rows="4"> </textarea>
+      <div class="form-group-small">
+        <textarea class="form-control-form-small" type="text" name="burger_name" rows="4"></textarea>
       </div>
-      <button class="btn btn-default btn-lg" type="submit">Submit!</button>
+      </div>
+      </div>
+      <button class="btn btn-default" type="submit">Submit!</button>
     </form>
   </div> 
   </center>
